# health-tracker

./: Cargo.toml  README.md  index.html
src/: app.rs  main.rs  models.rs  utils.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  lib.rs  main.rs
src/components/: data_manager.rs  mod.rs  navbar.rs  time_series_plot.rs
src/tauri/: delete_data.rs  get_data.rs  mod.rs  println.rs  submit_data.rs
src/views/: home.rs  mod.rs  temperature.rs  weight.rs
style/: input.css
