[package]
name = "health-tracker-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1", features = ["unstable"] }
chrono = { version = "0", features = ["alloc", "now", "serde"] }
console_error_panic_hook = "0.1"
icondata = "0.3.1"
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_icons = "0.3.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0"
wasm-bindgen = "0"
wasm-bindgen-futures = "0"
leptos-use = "0.10.10"

[workspace]
members = ["src-tauri"]
